# spectrometer

./: .gitignore  CMakeLists.txt  resource.qrc
data/synthetic/: dark_frame.csv  emission_standard.csv
docs/: phase2-development-notes.md
src/: main.cpp
src/acquisition/: spectrometer.hpp
src/acquisition/filespectrometer/: filespectrometer.cpp  filespectrometer.hpp
src/acquisition/mockspectrometer/: mockspectrometer.cpp  mockspectrometer.hpp
src/app/: acquisitionworker.cpp  acquisitionworker.hpp  spectrometercontroller.cpp  spectrometercontroller.hpp  spectrumview.cpp  spectrumview.hpp
src/app/qml/: main.qml
src/core/: appconfig.hpp  logging.cpp  logging.hpp  spectrum.hpp
src/processing/: movingaverage.cpp  movingaverage.hpp  processingpipeline.hpp  signalprocessor.hpp
src/storage/: storage.hpp
src/synthetic/: syntheticgenerator.cpp  syntheticgenerator.hpp  syntheticprofile.cpp  syntheticprofile.hpp
src/utils/: typedefs.hpp
